# yolov8

./: .gitignore  CMakeLists.txt  main.cpp  main.h
tools/: ImageTools.cpp  ImageTools.h
yolo/: YoloDet.cpp  YoloDet.h  YoloPose.cpp  YoloPose.h
